# backend-vehicle-management

./: .env  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
application/: Cargo.toml
application/src/: lib.rs  pagination.rs
application/src/auth/: mod.rs  model.rs
application/src/filters/: mod.rs  vehicle_filter.rs
application/src/queries/: mod.rs
application/src/shared/: pagination.rs
application/src/template/filters/: template_filter.rs
application/src/use_cases/vehicle/: create_vehicle.rs  get_all_vehicle.rs  get_vehicle.rs  mod.rs
application/src/vehicle/: mod.rs
application/src/vehicle/filters/: mod.rs  vehicle_filter.rs
application/src/vehicle/models/: vehicle.rs
application/src/vehicle/queries/: vehicle_query.rs
application/src/vehicle/traits/: vehicle_repository.rs
docs/: USE_CASES.md
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/maintenance/: mod.rs
domain/src/maintenance/entities/: maintenance.rs  maintenance2.rs  maintenance_log.rs  maintenance_record.rs  maintenance_status.rs  maintenance_type.rs  mod.rs
domain/src/maintenance/repositories/: maintenance_repository.rs  maintenance_type_repository.rs  mod.rs
domain/src/maintenance/value_types/: maintenance_interval_type.rs  mod.rs
domain/src/user/: mod.rs
domain/src/user/entities/: user.rs
domain/src/user/value_types/: email.rs  mod.rs  user_id.rs
domain/src/vehicle/entities/: mod.rs  vehicle.rs  vehicle_status.rs
domain/src/vehicle/repositories/: mod.rs  (+1 more)
infrastructure/postgres/: README.md
migrations/: 20250702155309_init_schema.sql
(+40 files in other folders)
